Updating html code

--- a/index.html
+++ b/index.html
@@ -17,20 +17,16 @@
   <section class="content">
 
     <!-- Tableau Public visualization embed code 1-->
-    <div class='tableauPlaceholder' id='viz1718201037810' style='position: relative'>
+    <div class='tableauPlaceholder' id='viz1718199532041' style='position: relative'>
       <noscript>
-        <a href='#'>
-          <img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;St&#47;StockAnalysis_17179680202210&#47;Story&#47;1_rss.png' style='border: none' />
-        </a>
+        <a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;XM&#47;XM7C6J8TT&#47;1_rss.png' style='border: none' /></a>
       </noscript>
       <object class='tableauViz' style='display:none;'>
         <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
         <param name='embed_code_version' value='3' />
-        <param name='site_root' value='' />
-        <param name='name' value='StockAnalysis_17179680202210&#47;Story' />
-        <param name='tabs' value='yes' />
+        <param name='path' value='shared&#47;XM7C6J8TT' />
         <param name='toolbar' value='yes' />
-        <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;St&#47;StockAnalysis_17179680202210&#47;Story&#47;1.png' />
+        <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;XM&#47;XM7C6J8TT&#47;1.png' />
         <param name='animate_transition' value='yes' />
         <param name='display_static_image' value='yes' />
         <param name='display_spinner' value='yes' />
@@ -41,10 +37,23 @@
       </object>
     </div>
     <script type='text/javascript'>
-      var divElement = document.getElementById('viz1718201037810');
+      var divElement = document.getElementById('viz1718199532041');
       var vizElement = divElement.getElementsByTagName('object')[0];
-      vizElement.style.width = '1720px';
-      vizElement.style.height = '1014px';
+      if (divElement.offsetWidth > 800) {
+        vizElement.style.minWidth = '1720px';
+        vizElement.style.maxWidth = '100%';
+        vizElement.style.minHeight = '950px';
+        vizElement.style.maxHeight = (divElement.offsetWidth * 0.75) + 'px';
+      } else if (divElement.offsetWidth > 500) {
+        vizElement.style.minWidth = '1720px';
+        vizElement.style.maxWidth = '100%';
+        vizElement.style.minHeight = '950px';
+        vizElement.style.maxHeight = (divElement.offsetWidth * 0.75) + 'px';
+      } else {
+        vizElement.style.width = '100%';
+        vizElement.style.minHeight = '750px';
+        vizElement.style.maxHeight = (divElement.offsetWidth * 1.77) + 'px';
+      }
       var scriptElement = document.createElement('script');
       scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
       vizElement.parentNode.insertBefore(scriptElement, vizElement);
