--- a/index.html
+++ b/index.html
@@ -17,16 +17,18 @@
   <section class="content">
 
     <!-- Tableau Public visualization embed code 1-->
-    <div class='tableauPlaceholder' id='viz1718199532041' style='position: relative'>
+    <div class='tableauPlaceholder' id='viz1718201037810' style='position: relative'>
       <noscript>
-        <a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;XM&#47;XM7C6J8TT&#47;1_rss.png' style='border: none' /></a>
+        <a href='#'><img alt=' ' src='ttps:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;St&#47;StockAnalysis_17179680202210&#47;Story&#47;1_rss.png' style='border: none' /></a>
       </noscript>
       <object class='tableauViz' style='display:none;'>
         <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
         <param name='embed_code_version' value='3' />
-        <param name='path' value='shared&#47;XM7C6J8TT' />
+        <param name='site_root' value='' />
+        <param name='name' value='StockAnalysis_17179680202210&#47;Story' />
+        <param name='tabs' value='yes' />
         <param name='toolbar' value='yes' />
-        <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;XM&#47;XM7C6J8TT&#47;1.png' />
+        <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;St&#47;StockAnalysis_17179680202210&#47;Story&#47;1.png' />
         <param name='animate_transition' value='yes' />
         <param name='display_static_image' value='yes' />
         <param name='display_spinner' value='yes' />
@@ -37,7 +39,7 @@
       </object>
     </div>
     <script type='text/javascript'>
-      var divElement = document.getElementById('viz1718199532041');
+      var divElement = document.getElementById('viz1718201037810');
       var vizElement = divElement.getElementsByTagName('object')[0];
       if (divElement.offsetWidth > 800) {
         vizElement.style.minWidth = '1720px';
