--- a/index.html
+++ b/index.html
@@ -41,21 +41,8 @@
     <script type='text/javascript'>
       var divElement = document.getElementById('viz1718201037810');
       var vizElement = divElement.getElementsByTagName('object')[0];
-      if (divElement.offsetWidth > 800) {
-        vizElement.style.minWidth = '1720px';
-        vizElement.style.maxWidth = '100%';
-        vizElement.style.minHeight = '950px';
-        vizElement.style.maxHeight = (divElement.offsetWidth * 0.75) + 'px';
-      } else if (divElement.offsetWidth > 500) {
-        vizElement.style.minWidth = '1720px';
-        vizElement.style.maxWidth = '100%';
-        vizElement.style.minHeight = '950px';
-        vizElement.style.maxHeight = (divElement.offsetWidth * 0.75) + 'px';
-      } else {
-        vizElement.style.width = '100%';
-        vizElement.style.minHeight = '750px';
-        vizElement.style.maxHeight = (divElement.offsetWidth * 1.77) + 'px';
-      }
+      vizElement.style.width='1720px';
+      vizElement.style.height='1014px';
       var scriptElement = document.createElement('script');
       scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
       vizElement.parentNode.insertBefore(scriptElement, vizElement);
